# Ticket-ResolutionEnv

./: Dockerfile  README.md  app.py  inference.py  openenv.yaml  out.txt  pyproject.toml  requirements.txt
env/: __init__.py  environment.py  models.py  reward.py  tasks.py
server/: app.py
