[project]
name = "ticket-resolution-env"
version = "0.1.0"
description = "Customer support ticket resolution environment for OpenEnv hackathon"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "openai"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["env"]
